--- a/plc4x/throwing-the-towel.adoc
+++ b/plc4x/throwing-the-towel.adoc
@@ -199,45 +199,44 @@ Even if I have completely lost my faith in open-source in the OT-industry, I sti
 
 == Glimpse into the future
 
-There's something big lurking around the corner, that might become an issue soon and which could speed up things.
+There's something big lurking around the corner, that will become an issue soon and which could speed up things.
 
-Once the CRA and PLD initiatives are becoming binding legal frameworks in Europe and probably also similar initiatives elsewhere, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
-A very long list of rules will apply to how software is to be created and maintained.
-Also will open-source projects no longer be able to provide the software "as-is", as excluding liability will then not be possible anymore.
+Once in Europe the CRA and PLD initiatives are becoming binding legal frameworks and probably also similar initiatives elsewhere, I expect the `house-keeping` in projects such as Apache PLC4X to skyrocket.
+A very long list of rules will apply to how software is to be created and maintained and this list doesn't really make a difference between commercial offerings and open-source projects.
+As soon as a `product with digital elements` (Which software is generally referred to here) is to be `put on the market` (releasing the software), the entity releasing the software is responsible to complying with these rules.
 
-If there's nobody willing or able to do that or live with the risks, that's going to create facts a lot quicker than most people expect.
+Luckily an initial pushback by commercial and non-commercial entities here in Europe have made the officials define a so-called `open-source steward` as fourth type of player on the field (Next to: "private", "commercial", "governmental"). Foundations such as the Apache Software Foundation as well as the Eclipse Foundation will most probably be treated as such.
 
-Money would definitely be well invested in supporting open-source projects in general,
-especially those projects that don't have any form of commercial backing.
-Otherwise, these will not have the money and power to prepare for coming changes.
-Some rules for projects considered `critical infrastructure` - which I have been told, PLC4X and similar projects from the same thematic area possibly will fall under - will most probably require them to execute external code audits in order to be allowed to release software.
+Projects being released by an `open-source steward` will only be required to comply with about half of all these rules.
+Using software of any vendor that does not have this status will require the full list.
 
-Which group of private people will be willing to invest the significant amounts of money in order to pay for something, just to enable others to continue taking their stuff for free?
+Experts are estimating that this will make software in general become 30% more expensive, as the vendors will be charging their customers for the extra work.
 
-I see no way around significant investments by entities relying on open-source but also legal bodies such as the European Union, in order to keep the lights on.
+Luckily at the ASF we already have pretty strict policies when it comes to releasing software, so we expect the differences for most projects to be not that significant. Those parts where changes are needed, we're already working hard on shielding our projects from, by investing significantly into tooling and infrastructure.
 
-One thing people relying on open-source should generally consider:
-Once CRA and PLC are in place in the EU, using software provided by a foundation which is considered being an `open-source steward`, will reduce the amount of hoops a company needs to jump through in order to sell their products significantly.
-The Apache Software Foundation is considered such an `open-source steward`.
+Open-source projects not located at an open-source steward, especially ones without commercial backing will most probably simply stop existing or might start prohibiting the usage of their software in affected countries.
 
-Using projects that are not maintained by an open-source steward might become impossible, as these projects would either need to comply with all rules or using them will become illegal.
-The only other option would be, that the company using it takes care of this.
-This would result in a number of companies all doing exactly the same hoop-jumping in parallel.
+However, there will be one group of software, that will most probably still have to comply with a lot more rules, even if they are hosted at an open-source seward: Projects that are considered `critical infratstuctue`.
+I was told that Apache PLC4X will most probably be considered as such. Releasing critical infrastructure products, will most definitely require external code audits etc. (which also need to be prepared and paid for).
+
+Without a significant increase in workforce in PLC4X and en even more significant increase in funding, I am pretty sure that nobody currently working on the project is willing to continue.
+
+Money would definitely be well invested in supporting open-source projects in general, especially those projects that don't have any form of commercial backing. Without significant invests projects such as PLC4X will stop existing.
+
+Using open-source that is not maintained by an open-source steward might become impossible, as these projects would either need to comply with all rules or releasing and hereby using them in the EU will become illegal.
 
 Apache PLC4X is, as far as I know, the only open source project for communication with various types of industrial equipment, which is also hosted by an organization considered an open-source steward.
 To my knowledge, the only other project in this sector is the Eclipse Milo project, as the Eclipse foundation is also considered an open-source steward.
 However, this project only deals with communication in one single protocol (OPC-UA).
 
-Having a look at most other open-source projects in that field, most are un-paid single person projects.
+Having a look at most other open-source projects in the same field, most are run by individuals in their free time.
 I see no chance of being able to continue to use these in a CRA and PLD regulated world.
 
-As a last option: Implementing things themselves will require not only involve investing a lot of work, but also jumping through the complete list of hoops.
-A list we currently only know is going to be very long, however which also is currently being defined by the EU.
+As a last option: Implementing things themselves will require not only involve investing a lot of work, but also complying with the full list of rules.
 
-Generally: Companies relying on open-source should generally consider funding the projects and the foundations of whom they plan consuming open-source products now and in the future.
+Generally: Companies relying on open-source should generally consider funding both the projects and the foundations of whom they plan consuming open-source products from now and in the future.
 I know the ASF is already preparing itself and it's projects, and this comes with quite some costs for the foundation.
-Not only direct monetary costs, but also costs of personal involvement.
-Processes need to be defined or re-defined, new tooling needs to be created, projects need to be mentored and trained to follow new processes.
+Processes need to be defined or re-defined, new tooling needs to be created, projects need to be trained to follow new processes.
 If these additional costs make the foundations run at a deficit, these safe harbours might also disappear, leaving the commercial IT world a world full of hoop-jumpers.
 
 == Links
