--- a/plc4x/throwing-the-towel.adoc
+++ b/plc4x/throwing-the-towel.adoc
@@ -210,31 +210,35 @@ Luckily an initial pushback by commercial and non-commercial entities here in Eu
 Projects being released by an `open-source steward` will only be required to comply with about half of all these rules.
 Using software of any vendor that does not have this status will require the full list.
 
-Experts are estimating that this will make software in general become 30% more expensive, as the vendors will be charging their customers for the extra work.
+When it comes to using software, there will most probably be three variants:
+- Consuming software that complies with the full list of rules will be ok
+- Consuming software that is released by an open-source steward will require fulfilling a number of rules on the using side
+- Consuming software that is either not fulfilling all the rules that apply to it, will become illegal
 
-Luckily at the ASF we already have pretty strict policies when it comes to releasing software, so we expect the differences for most projects to be not that significant. Those parts where changes are needed, we're already working hard on shielding our projects from, by investing significantly into tooling and infrastructure.
+Experts are estimating that this will make commercial software in general become 30% more expensive, as the vendors will be charging their customers for the extra work.
+
+Luckily at the ASF we already have pretty strict policies when it comes to releasing software, so we expect the differences for most projects to be not that significant. Those parts where changes are needed, we're already working hard on shielding our projects, by investing significantly into tooling and infrastructure.
 
 Open-source projects not located at an open-source steward, especially ones without commercial backing will most probably simply stop existing or might start prohibiting the usage of their software in affected countries.
 
 However, there will be one group of software, that will most probably still have to comply with a lot more rules, even if they are hosted at an open-source seward: Projects that are considered `critical infratstuctue`.
 I was told that Apache PLC4X will most probably be considered as such. Releasing critical infrastructure products, will most definitely require external code audits etc. (which also need to be prepared and paid for).
 
+This also brings me back to the topic of this blog post: That PLC4X needs more support by the companies using it.
+
 Without a significant increase in workforce in PLC4X and en even more significant increase in funding, I am pretty sure that nobody currently working on the project is willing to continue.
 
-Money would definitely be well invested in supporting open-source projects in general, especially those projects that don't have any form of commercial backing. Without significant invests projects such as PLC4X will stop existing.
-
-Using open-source that is not maintained by an open-source steward might become impossible, as these projects would either need to comply with all rules or releasing and hereby using them in the EU will become illegal.
+Money would definitely be well invested in supporting open-source projects in general, especially those projects that don't have any form of commercial backing. Without significant invests projects such as PLC4X will simply stop existing.
 
 Apache PLC4X is, as far as I know, the only open source project for communication with various types of industrial equipment, which is also hosted by an organization considered an open-source steward.
 To my knowledge, the only other project in this sector is the Eclipse Milo project, as the Eclipse foundation is also considered an open-source steward.
 However, this project only deals with communication in one single protocol (OPC-UA).
 
 Having a look at most other open-source projects in the same field, most are run by individuals in their free time.
-I see no chance of being able to continue to use these in a CRA and PLD regulated world.
+I see no chance of being able to continue using these in a CRA and PLD regulated world.
 
-As a last option: Implementing things themselves will require not only involve investing a lot of work, but also complying with the full list of rules.
+Generally: Companies relying on open-source should generally consider funding both the projects and the foundations of whom they plan consuming open-source products from now and in the future, or they will have to do all the work themselves, which will come at costs that are a lot higher than simply supporting existing projects. However, this has to happen now and not once it's too late. If the communities and projects have already given up, that's too late, so they need support now.
 
-Generally: Companies relying on open-source should generally consider funding both the projects and the foundations of whom they plan consuming open-source products from now and in the future.
 I know the ASF is already preparing itself and it's projects, and this comes with quite some costs for the foundation.
 Processes need to be defined or re-defined, new tooling needs to be created, projects need to be trained to follow new processes.
 If these additional costs make the foundations run at a deficit, these safe harbours might also disappear, leaving the commercial IT world a world full of hoop-jumpers.
